<resources>
    <string name="app_name">aplikasiku</string>
    <string name="todo">TODO</string>
    <string name="APP_GALON">APP_GALON</string>
    <string name="welcome_login_delivery">WELCOME LOGIN </string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="Lupa_Password">Lupa Password ?</string>
    <string name="daftargalonapps">Daftar Galon Apps :</string>
    <string name="nama">Nama :</string>
    <string name="Username">Username :</string>
    <string name="Alamat">Alamat :</string>
    <string name="No.Hp">No. Hp :</string>
    <string name="Email">Email :</string>
    <string name="Password">Password :</string>
    <string name="masukkan_nama">masukkanNama</string>
    <string name="masukkan_Alamat">masukkanAlamat</string>
    <string name="masukkan_Username">masukkanUsername</string>
    <string name="masukkannohp">masukkanNoHp</string>
    <string name="masukkanemail">masukkanEmail</string>
    <string name="masukkanpassword">masukkanPassword</string>
    <string name="welcome_app_galon">Delivery Barang</string>
    <string name="home">HOME</string>
    <string name="Profil">PROFIL</string>
    <string name="info">Info</string>
    <string name="textview">TextView</string>
    <string name="JumlahGalon">Jumlah Galon :</string>
    <string name="masukkanjumlahgalon">MasukkanJumlahGalon</string>
    <string name="HargaRp16000">Rp 16.000 / Per Tabung</string>
    <string name="HargaRp18000">Rp 18.000 / Per Galon</string>
    <string name="HargaRp5000">Rp 3.000 / Per Botol</string>
    <string name="HargaRp15000">Rp 15.000 / Per Dos</string>
    <string name="HargaRp12000">Rp 12.000 / Per Dos</string>
    <string name="Nama">Nama :</string>
    <string name="TampilNama">TampilNama</string>
    <string name="TampilAlamat">TampilAlamat</string>
    <string name="TampilNoHp">TampilNoHp</string>
    <string name="TampilEmail">TampilEmail</string>
    <string name="Edit">Edit</string>
    <string name="JumlahBarang">Jumlah Barang :</string>
    <string name="FormPesanBarang">Form Pesan Barang</string>
    <string name="MassukkanJumlahBarang">MasukkanJumlahBarang</string>
    <string name="PESAN">PESAN</string>
    <string name="lupa_password">Lupa_Password</string>
    <string name="GalonDenganJumlahPesanan">Galon Dengan Jumlah Pesanan</string>
    <string name="HargaRp3000">Rp 3.000 / Per Botol</string>
    <string name="HargaRp7000">Rp 7.000 / Per Botol</string>
    <string name="AkanDikirimKe">Akan Dikirim Ke</string>
    <string name="DalamKurunWaktu">Dalam Kurun Waktu</string>
    <string name="Menit">Menit.</string>
    <string name="Alamat1">TampilAlamat</string>
    <string name="Tampil">Tampil</string>
    <string name="berapa">Berapa</string>
    <string name="PesananGalonDenganJumlah">Pesanan Galon Dengan Jumlah</string>
    <string name="AkanDikirimKeAlamat">Akan Dikirim Ke Alamat</string>
    <string name="ApakahPesananIniBenar">Apakah Pesanan Ini Benar ?</string>
    <string name="Ya">Ya</string>
    <string name="Tidak">Tidak</string>
    <string name="todos">TODO</string>
    <string name="todog">TODO</string>
    <string name="todof">TODO</string>
    <string name="todoko">TODO</string>
    <string name="InfoAplikasi">Info Penggunaan Aplikasi</string>


</resources>
