<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".kuinfo">

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:background="@drawable/strip"
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:orientation="vertical"
            android:id="@+id/linearLayout1">

            <TextView
                android:id="@+id/model"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:gravity="center"
                android:text="@string/welcome_app_galon"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="italic|bold" />

            <Button
                android:id="@+id/button"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@drawable/buttonstyleclicked"
                android:text="@string/home"
                android:textColor="#000000"
                android:textStyle="bold" />

            <Button
                android:id="@+id/profil"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:background="@drawable/buttonstyleclicked"
                android:text="@string/Profil"
                android:textColor="#000000"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button3"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:background="@drawable/buttonstyleclicked"
                android:text="@string/info" />



        </RelativeLayout>


    </android.support.v7.widget.GridLayout>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="189dp"
        android:layout_toEndOf="@id/textView12"
        android:text="@string/PesananGalonDenganJumlah"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView12"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="13dp"
        android:ems="10"
        android:hint="@string/Tampil"
        android:inputType="textPersonName"
        android:text="@string/Tampil" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView12"
        android:layout_marginTop="243dp"
        android:text="@string/AkanDikirimKeAlamat"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editText9"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView13"
        android:layout_alignEnd="@+id/editText6"
        android:ems="10"
        android:hint="@string/TampilAlamat"
        android:inputType="textPersonName"
        android:text="@string/TampilAlamat" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="217dp"
        android:layout_marginStart="47dp"
        android:text="@string/ApakahPesananIniBenar"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="143dp"
        android:layout_marginStart="62dp"
        android:background="@drawable/buttonstyleselector"
        android:text="@string/Ya"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_alignBottom="@+id/button6"
        android:layout_alignEnd="@+id/textView12"
        android:background="@drawable/buttonstyleselector"
        android:text="@string/Tidak"
        android:textStyle="bold" />

</RelativeLayout>