<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".kupemesan">
    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:background="@drawable/strip"
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:orientation="vertical"
            android:id="@+id/linearLayout1">

            <TextView
                android:id="@+id/model"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:gravity="center"
                android:text="@string/welcome_app_galon"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="italic|bold" />

            <Button
                android:id="@+id/button"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@drawable/buttonstyleclicked"
                android:text="@string/home"
                android:textColor="#000000"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button2"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:background="@drawable/buttonstyleclicked"
                android:text="@string/Profil"
                android:textColor="#000000"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button3"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:background="@drawable/buttonstyleclicked"
                android:text="@string/info" />



        </RelativeLayout>

    </android.support.v7.widget.GridLayout>

    <TextView
        android:id="@+id/jumlahbarang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="135dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:text="@string/JumlahBarang" />

    <EditText
        android:id="@+id/jumlahbarang1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="179dp"
        android:ems="10"
        android:hint="@string/MassukkanJumlahBarang"
        android:inputType="textPersonName"
        android:text="@string/MassukkanJumlahBarang"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/jumlahbarang"
        android:layout_marginTop="258dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:text="@string/Alamat" />

    <EditText
        android:id="@+id/masukAlamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/jumlahbarang1"
        android:layout_marginBottom="222dp"
        android:ems="10"
        android:hint="@string/masukkan_Alamat"
        android:inputType="textPersonName"
        android:text="@string/masukkan_Alamat"
        android:textColor="#000000" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="133dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/buttonstyleselector"
        android:text="@string/PESAN" />


</RelativeLayout>