<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".infob">
    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:background="@drawable/strip"
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:orientation="vertical"
            android:id="@+id/linearLayout1">

            <TextView
                android:id="@+id/model"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:gravity="center"
                android:text="@string/welcome_app_galon"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="italic|bold" />

            <Button
                android:id="@+id/button"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@drawable/buttonstyleclicked"
                android:text="@string/home"
                android:textColor="#000000"
                android:textStyle="bold" />

            <Button
                android:id="@+id/profil"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:background="@drawable/buttonstyleclicked"
                android:text="@string/Profil"
                android:textColor="#000000"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button3"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:background="@drawable/buttonstyleclicked"
                android:text="@string/info" />



        </RelativeLayout>


    </android.support.v7.widget.GridLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="333dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="195dp"
        android:contentDescription="@string/todoko"
        app:srcCompat="@drawable/infohj" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="140dp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/InfoAplikasi" />


</RelativeLayout>